--- a/client/src/index.html
+++ b/client/src/index.html
@@ -3,11 +3,12 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Client</title>
+  <title>SpakEngineering</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+  <link rel="stylesheet" href="./assets/fonts/line-awesome-1.3.0/css/line-awesome.min.css">
 </head>
 
 <body>
